[package]
name = "rustpilot"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "AI-powered coding assistant for Rust developers"
readme = "README.md"
repository = "https://github.com/yourusername/rustpilot"
license = "MIT"
keywords = ["ai", "assistant", "claude", "coding", "agent"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
thiserror = "2.0"
dotenv = "0.15"
colored = "2.1"
similar = "2.6"
